Updated resume, fixed links, fixed image background on mobile.

--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,5 @@
-#main {
+html,
+body {
   background: url(images/background_full.jpg) no-repeat center center fixed;
   width: 100%;
   height: 100%;
@@ -87,7 +88,7 @@ iframe {
 }
 
 @media only screen and (max-width: 700px) {
-  #main {
+  body {
     background: url(images/background_thin.jpg) no-repeat center center fixed;
     width: 100%;
     height: 100%;
